--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,16 @@ services:
     volumes:
       - postgres:/var/lib/postgresql/data
 
+  test-postgres:
+    image: postgres
+    container_name: postgres
+    ports:
+      - 6505:5432
+    env_file:
+      - ./.env
+    volumes:
+      - postgres:/var/lib/postgresql/data
+
   adminer:
     image: adminer
     restart: always
