--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: '3.9'
 
 services:
-  postgres:
-    image: postgres
-    container_name: postgres
-    ports:
-      - 6500:5432
-    env_file:
-      - ./.env
-    volumes:
-      - postgres:/var/lib/postgresql/data
+  # postgres:
+  #   image: postgres
+  #   container_name: postgres
+  #   ports:
+  #     - 6500:5432
+  #   env_file:
+  #     - ./.env
+  #   volumes:
+  #     - postgres:/var/lib/postgresql/data
 
   test-postgres:
     image: postgres
