--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "db:dev:up": "docker compose up -d",
     "db:dev:restart": "npm run db:dev:rm && npm run db:dev:up && sleep 1 && npm run prisma:dev:deploy",
     "prisma:test:deploy": "dotenv -e  .env.test -- prisma migrate deploy",
-    "db:test:rm": "docker compose rm test-postgres -s -f -v",
-    "db:test:up": "docker compose up test-postgres -d",
+    "db:test:rm": "docker compose rm -s -f -v",
+    "db:test:up": "docker compose up -d",
     "db:test:restart": "npm run db:test:rm && npm run db:test:up && sleep 1 && npm run prisma:test:deploy",
     "pr:start": "npm run db:dev:rm && npm run db:dev:up && sleep 1 && npm run prisma:dev:deploy && npm run start:dev",
     "build": "nest build",
